# ASCIIArcade

./: CMakeLists.txt  README.md  main.cpp
entities/: CMakeLists.txt  artefact.hpp  artifact.cpp  artifact.hpp  bullet.cpp  bullet.hpp  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  object.hpp  player.cpp  player.hpp  state.cpp  state.hpp
game/: CMakeLists.txt  game.cpp  game.hpp  info.cpp  info.hpp  menu.cpp  menu.hpp
maps/: CMakeLists.txt  artefatto.hpp  info.cpp  info.hpp  map.cpp  map.hpp  state.cpp  state.hpp
